--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.2.0",
     "vue-unicons": "^3.2.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
