--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^3.2.0",
     "vue-unicons": "^3.2.1",
     "vuedraggable": "^2.24.3",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
