--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   }
 }
